--- a/bio.html
+++ b/bio.html
@@ -3,10 +3,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Index Page</title>
+    <title>About Me</title>
   </head>
   <body>
-    <h1>Matthew Norbury</h1>
-    <a href="/cv.html">My CV</a>
+    <h1>About Me</h1>
   </body>
 </html>
