--- a/bio.html
+++ b/bio.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <!--Matthew Norbury - 16404219-->
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>About Me</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>About Me</h1>
-  </body>
+    <h2>What I'm doing here</h2>
+    <p>I'm a lad who is currently studying computing at the University of Northampton. I currently study six modules which are Web Development, Software Engineering, problem solving&Programming, Computer Communication, Computer Systems and Databases.</p>
+    <h2>Where I'm from</h2>
+    <p>I traveled to Northampton for university from The Wirral. Most people haven't heard of The Wirral so I just mainly tell them I'm from Liverpool - which I get away with because of my scouse like accent.</p>
+    <h2>What I like to do</h2>
+    <p>I love playing rugby, it's extremely fun and keeps me in good shape! I played for my local team for four years now and play when I visit home for the holidays. I'm looking to join the universities team but need to find the time to do so (after I've
+        completed my assignments). I also enjoy traveling, whether it be somewhere local or somewhere that is a distance away; if I haven't been there, I want to be there.</p>
+</body>
+
 </html>
