--- a/bio.html
+++ b/bio.html
@@ -3,19 +3,47 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="css/style-bio.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto|Ubuntu" rel="stylesheet">
     <meta charset="utf-8">
     <title>About Me</title>
 </head>
 
 <body>
-    <h1>About Me</h1>
-    <h2>What I'm doing here</h2>
+    <div class="header">
+        <h1>About Me</h1>
+    </div>
+
+    <a id="home" href="index.html" role="button">Home</a>
+    <a id="cv" href="cv.html" role="button">My CV</a>
+    <a id="contact" href="contact.html" role="button">Contact Me</a>
+
+    <br>
+    <h2>What I'm Doing Here</h2>
     <p>I'm a lad who is currently studying computing at the University of Northampton. I currently study six modules which are Web Development, Software Engineering, problem solving&Programming, Computer Communication, Computer Systems and Databases.</p>
-    <h2>Where I'm from</h2>
-    <p>I traveled to Northampton for university from The Wirral. Most people haven't heard of The Wirral so I just mainly tell them I'm from Liverpool - which I get away with because of my scouse like accent.</p>
-    <h2>What I like to do</h2>
+    <h2>Where I'm From</h2>
+    <p>I traveled to Northampton for university from The Wirral. Most people haven't heard of The Wirral so I just mainly tell them I'm from Liverpool - which I get away with because of my scouse like accent. Liverpool is quite well known for many things.
+        For example Liverpool is probably most famously know as the birth place of The Beatles - a fantasting band that were formed in the 1960s. Liverpool is also well known for their football teams and the football fanatics who live their; it's rare
+        to find someone in Liverpool who doesn't follow at least one football team!</p>
+    <h2>My Experience of University Life So Far</h2>
+    <p>To sum it up I've really enjoyed university so far. Now for the longer answer. Before coming to university I had times where I was excited to go and times when I was a little unsure of how it's going to go. Luckily in the first day I met three members
+        of the 5 that live with me in my flat and we sat around, introduced ourselves and then got on with the typical university experience; we started drinking! So I found out that most of my flat mates were a good bunch that night (the other two I
+        still hadn't seen). From there on out it's gone no where but up and I hope it continues that waythroughout.</p>
+    <h2>What I Like To Do</h2>
     <p>I love playing rugby, it's extremely fun and keeps me in good shape! I played for my local team for four years now and play when I visit home for the holidays. I'm looking to join the universities team but need to find the time to do so (after I've
-        completed my assignments). I also enjoy traveling, whether it be somewhere local or somewhere that is a distance away; if I haven't been there, I want to be there.</p>
+        completed my assignments). I also enjoy traveling, whether it be somewhere local or somewhere that is a distance away; if I haven't been there, I want to be there. I also like to play games on my PC in my free time, the games I like to play the
+        most are Counter Strike: Global Offensive and Overwatch</p>
+    <h2>A Little More About Me</h2>
+    <p>I'm 19 years old and have ginger hair. I have two brothers and trhee sisters, most of which have moved out. When it comes to pets I would most prefer to have a dog over anything else, although I've never owned one. I have, however, owned a gerbil,
+        a bearded dragon and have pretty much owned a kitten since my sister never looked after it leaving it to me to look after it. In school the subject I enjoyed the most was Comuter Science (Computing) I also enjoyed science a lot, especially Physics.
+        In my life so far I have sprained my right ankle three times, dislocated my shoulder twice and broken two of my ribs.</p>
+
+    <footer class="footer">
+        <p id="footdes">Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
+        <a id="linkedin" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
+        <a id="github" href="https://github.com/mattynorb">GitHub</a>
+    </footer>
+
 </body>
 
 </html>
