--- a/bio.html
+++ b/bio.html
@@ -38,11 +38,11 @@
         a bearded dragon and have pretty much owned a kitten since my sister never looked after it leaving it to me to look after it. In school the subject I enjoyed the most was Comuter Science (Computing) I also enjoyed science a lot, especially Physics.
         In my life so far I have sprained my right ankle three times, dislocated my shoulder twice and broken two of my ribs.</p>
 
-    <footer class="footer">
+    <div class="footer">
         <p id="footdes">Student of The University of Norhtampton, Northampton, Northamptonshire, United Kingdom.</p>
         <a id="linkedin" href="https://uk.linkedin.com/in/matthew-norbury-aa9718130">Linkedin</a>
         <a id="github" href="https://github.com/mattynorb">GitHub</a>
-    </footer>
+    </div>
 
 </body>
 
