--- a/bio.html
+++ b/bio.html
@@ -10,14 +10,16 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>About Me</h1>
-    </div>
+    <nav class="header">
+        <ul>
+            <h1>About Me</h1>
+            <li><a id="contact" href="contact.html" role="button">Contact Me</a></li>
+            <li><a id="cv" href="cv.html" role="button">My CV</a></li>
+            <li><a id="home" href="index.html" role="button">Home</a></li>
+        </ul>
+    </nav>
 
-    <a id="home" href="index.html" role="button">Home</a>
-    <a id="cv" href="cv.html" role="button">My CV</a>
-    <a id="contact" href="contact.html" role="button">Contact Me</a>
-
+    <br>
     <br>
     <h2>What I'm Doing Here</h2>
     <p>I'm a lad who is currently studying computing at the University of Northampton. I currently study six modules which are Web Development, Software Engineering, problem solving&Programming, Computer Communication, Computer Systems and Databases.</p>
