Final commit before submitting the work. Everyhting has been proof read and put in the correct format/folders.

--- a/htdocs/bio.html
+++ b/htdocs/bio.html
@@ -34,9 +34,9 @@
     <h2>What I Like To Do</h2>
     <p>I love playing rugby, it's extremely fun and keeps me in good shape! I played for my local team for four years now and play when I visit home for the holidays. I'm looking to join the universities team but need to find the time to do so (after I've
         completed my assignments). I also enjoy traveling, whether it be somewhere local or somewhere that is a distance away; if I haven't been there, I want to be there. I also like to play games on my PC in my free time, the games I like to play the
-        most are Counter Strike: Global Offensive and Overwatch</p>
+        most are Counter Strike: Global Offensive and Overwatch.</p>
     <h2>A Little More About Me</h2>
-    <p>I'm 19 years old and have ginger hair. I have two brothers and trhee sisters, most of which have moved out. When it comes to pets I would most prefer to have a dog over anything else, although I've never owned one. I have, however, owned a gerbil,
+    <p>I'm 19 years old and have ginger hair. I have two brothers and three sisters, most of which have moved out. When it comes to pets I would most prefer to have a dog over anything else, although I've never owned one. I have, however, owned a gerbil,
         a bearded dragon and have pretty much owned a kitten since my sister never looked after it leaving it to me to look after it. In school the subject I enjoyed the most was Comuter Science (Computing) I also enjoyed science a lot, especially Physics.
         In my life so far I have sprained my right ankle three times, dislocated my shoulder twice and broken two of my ribs.</p>
 
